--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/UTS/css/bootstrap.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/UTS/css/bootstrap.min.css" />
     <title>Document</title>
 </head>
-<body>
+
+<body class="">
     <div class="row bg-primary-subtle text-primary-emphasis p-3">
-        <div class="col-12 offset-10">
+        <div class="col-2 offset-10">
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Gift Card</a></li>
                 <li class="list-inline-item"><a href="#">Register</a></li>
@@ -16,26 +18,34 @@
             </ul>
         </div>
     </div>
-    <div class="row p-3 align-items-center bg-info-subtle">
+    <div class="row p-1 align-items-center bg-info-subtle">
         <div class="col-1 offset-1">
-            <img src="https://i.seadn.io/gae/2hDpuTi-0AMKvoZJGd-yKWvK4tKdQr_kLIpB_qSeMau2TNGCNidAosMEvrEXFO9G6tmlFlPQplpwiqirgrIPWnCKMvElaYgI-HiVvXc?auto=format&dpr=1&w=1000" class="rounded-circle img-thumbnail w-50" alt="">
+            <img src="https://i.seadn.io/gae/2hDpuTi-0AMKvoZJGd-yKWvK4tKdQr_kLIpB_qSeMau2TNGCNidAosMEvrEXFO9G6tmlFlPQplpwiqirgrIPWnCKMvElaYgI-HiVvXc?auto=format&dpr=1&w=1000"
+                class="rounded-circle img-thumbnail w-50" alt="" />
         </div>
         <div class="col-4 offset-5">
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
     </div>
-
+    <div class="row bg-info text-center m-2">
+        <div class="col-12">
+            <ul class="list-inline d-flex justify-content-evenly">
+                <li class="list-inline-item">HOME</li>
+                <li class="list-inline-item">SHOP</li>
+                <li class="list-inline-item">BLOG</li>
+                <li class="list-inline-item">ABOUT US</li>
+            </ul>
+        </div>
+    </div>
+    
     <script src="/layout/js/bootstrap.min.js"></script>
     <script src="/layout/js/bootstrap.bundle.min.js"></script>
-
-
-
-
 
     <!-- Script -->
     <script src="/UTS/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
