--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
 
     <!-- ------------------ Navbar ------------------ -->
     <div class="bg-primary text-light shadow-lg">
-        <div class="row p-3 justify-content-between">
-            <div class="col-1 offset-1">
-                <img src="https://media.tenor.com/_zWYqfZdneIAAAAM/shocked-face-shocked-meme.gif"
-                    class="rounded-circle  w-100" alt="" />
+    <div class="row p-3 justify-content-between">
+        <div class="col-3 d-flex align-items-center">
+            <img src="https://media.tenor.com/_zWYqfZdneIAAAAM/shocked-face-shocked-meme.gif"
+                class="rounded-circle w-25" alt="" />
+            <span class="ms-2 fw-bold fs-2">MYPET.COM</span>
+        </div>
+        <div class="col-3">
+            <div class="">
+                <ul class="list-inline justify-content-between d-flex">
+                    <li class="list-inline-item"><a href="#" class="nav-link">Gift Card</a></li>
+                    <li class="list-inline-item"><a href="#" class="nav-link">Track Order</a></li>
+                    <li class="list-inline-item"><a href="#" class="nav-link">Contact Us</a></li>
+                </ul>
             </div>
-            <div class="col-3">
-                <div class="">
-                    <ul class="list-inline justify-content-between d-flex">
-                        <li class="list-inline-item"><a href="#" class="nav-link">Gift Card</a></li>
-                        <li class="list-inline-item"><a href="#" class="nav-link">Track Order</a></li>
-                        <li class="list-inline-item"><a href="#" class="nav-link">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="pt-4">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-light" type="submit">Search</button>
-                    </form>
-                </div>
+            <div class="pt-4">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline-light" type="submit">Search</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
+
     <div class="row text-center bg-primary-subtle shadow-lg">
         <div class="col-6 offset-3">
             <ul class="nav justify-content-evenly ">
@@ -52,7 +54,6 @@
             </ul>
         </div>
     </div>
-    <!--  -->
     <!-- ------------- Section / sidebar ----------------- -->
     <div class="row p-3">
         <div class="col-2 shadow-lg">
@@ -69,6 +70,8 @@
                 <li class="list-group-item"><a href="#" class="nav-link">Item 10</a></li>
             </ul>
         </div>
+
+        <!-- ----------------------------- Carousel ---------------------------------- -->
         <div class="col-8">
             <div id="carouselExample" class="carousel slide shadow-lg">
                 <div class="carousel-inner">
@@ -92,6 +95,8 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
+            <!-- --------------------------------------- Card ---------------------------------------- -->
             <div class="row justify-content-between p-3">
                 <div class="card bg-primary-subtle shadow-lg" style="width: 28rem">
                     <img src="https://cdn.britannica.com/19/213119-050-C81C786D/Grumpy-Cat-2015-memes.jpg"
@@ -134,6 +139,7 @@
             </div>
             
         </div>
+        <!-- ------------------------------------ Sidebar ------------------------------------ -->
         <div class="col-2 shadow-lg">
             <ul class="list-group list-group-flush gap-5">
                 <li class="list-group-item"><a href="#" class="nav-link">Item 1</a></li>
@@ -147,6 +153,7 @@
                 <li class="list-group-item"><a href="#" class="nav-link">Item 9</a></li>
                 <li class="list-group-item"><a href="#" class="nav-link">Item 10</a></li>
             </ul>
+            <!-- ------------------------------- Link Eksternal ------------------------------------ -->
             <div class="mt-1">
                 <div class="card mb-3 bg-primary-subtle shadow-lg" style="max-width: 540px;">
                     <div class="row g-0 justify-content-center">
